lesson3/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solrcloud-ingress
  namespace: solr
spec:
  ingressClassName: nginx
  rules:
    - host: solr.local
      http:
        paths:
          - pathType: Prefix
            path: "/solr"
            backend:
              service:
                name: example-solrcloud-common
                port:
                  number: 80
